--- a/.github/workflows/tag_commits_on_main.yaml
+++ b/.github/workflows/tag_commits_on_main.yaml
@@ -7,8 +7,11 @@ on:
     paths:
       - pyproject.toml
 
+permissions:
+  contents: write
+
 jobs:
   tag_version:
     runs-on: ubuntu-latest
     steps:
-      - uses: villoro/vhooks/tag_version@0.4.0
+      - uses: villoro/vhooks/tag_version@0.5.0
