Also fix tag_version

--- a/tag_version/action.yml
+++ b/tag_version/action.yml
@@ -8,6 +8,11 @@ inputs:
     required: false
     default: main
 
+  path:
+    description: Path inside pyproject.toml to extract the version
+    required: false
+    default: project/version
+
 runs:
   using: composite
   steps:
@@ -19,7 +24,7 @@ runs:
       shell: bash
 
     - name: Extract Version from pyproject.toml
-      run: python $GITHUB_ACTION_PATH/tag_version.py --branch=${{ inputs.branch }}
+      run: python $GITHUB_ACTION_PATH/tag_version.py --branch=${{ inputs.branch }} --path=${{ inputs.path }}
       shell: bash
 
     - name: Check if Tag Exists
